--- a/Aplicacion/index.html
+++ b/Aplicacion/index.html
@@ -26,7 +26,7 @@
 			<img id="miniCircleP" alt="Apollame" src="images/PCircle.jpg"/ class="inline">
 			<div id="line2" class="line"></div>
 			<div id="welcomeLanguage">
-				<a href="#" id="Esp">Bienvenido</a></BR>
+				<a href="#" id="Esp">Bienvenido2</a></BR>
 				<a href="#" id="Ing">Welcome</a>
 			</div>
 		</div>
