--- a/Aplicacion/index.html
+++ b/Aplicacion/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>::Apollame::</title>
-<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/jquery-1.7.2.js"></script>
 <style type="text/css">
 @import url(css/css.css);
 </style>
@@ -26,7 +26,7 @@
 			<img id="miniCircleP" alt="Apollame" src="images/PCircle.jpg"/ class="inline">
 			<div id="line2" class="line"></div>
 			<div id="welcomeLanguage">
-				<a href="#" id="Esp">Bienvenido2</a></BR>
+				<a href="#" id="Esp">Bienvenido</a></BR>
 				<a href="#" id="Ing">Welcome</a>
 			</div>
 		</div>
