--- a/Aplicacion/indexTemp.html
+++ b/Aplicacion/indexTemp.html
@@ -22,8 +22,7 @@
 		<div id="content">    	
 			<h2>Bienvenidos</h2>
 			<p>"Cada joven es un diamante, el reto es saber pulirlo de la forma y momento aecuado para que por si mismo pueda brillar y maravillar el mundo entero"</p>
-		</div>
-		<div id="foot">Tutorial by James for NETTUTS</div>-->
+		</div>-->
 		<div id="animateDiv">
 			<div id="line1" class="line"></div>
 			
