--- a/Aplicacion/intro.html
+++ b/Aplicacion/intro.html
@@ -13,12 +13,13 @@
 <body>	
 	<img id="logoApollame" alt="Apollame" src="images/LogoApollame.jpg"/>
 	<ul id="nav">
-		<li><a href="index.html">Quienes somos</a></li>
-		<li><a href="about.html">Eventos</a></li>
-		<li><a href="portfolio.html">Empresas Responsables</a></li>
-		<li><a href="contact.html">Contacto</a></li>
-		<li><a href="terms.html">Registro</a></li>
+		<li><a href="index.html">¿Quienes somos?</a></li>
+		<li><a href="about.html">Proyectos</a></li>
+		<li><a href="portfolio.html">Alianzas</a></li>
+		<li><a href="contact.html">Liderazgo</br>que trasciende</a></li>
+		<li><a href="terms.html">Voluntariado</br>  internacional</a></li>
+		<li><a href="terms.html">Contacto</a></li>
 	</ul>
-	<div id="content">fdsafsda</div>
+	<div id="content"></div>
 </body>
 </html>
