--- a/Aplicacion/index.html
+++ b/Aplicacion/index.html
@@ -7,12 +7,14 @@
 <style type="text/css">
 @import url(css/css.css);
 </style>
+<script type="text/javascript" src="js/jquery.cookie.js"></script>
 <script type="text/javascript" src="js/CustomPluginJQuery.js"></script>
+<script type="text/javascript" src="js/lang.js"></script>
 <script type="text/javascript" src="js/js.js"></script>
 </head>
 <body>
 	<div id="wrapper">
-		<div id="content"></div>
+		<div id="MainContent"></div>
 		<div id="animateDiv">
 			<div id="line1" class="line"></div>
 			
@@ -26,8 +28,8 @@
 			<img id="miniCircleP" alt="Apollame" src="images/PCircle.jpg"/ class="inline">
 			<div id="line2" class="line"></div>
 			<div id="welcomeLanguage">
-				<a href="#" id="Esp">Bienvenido</a></BR>
-				<a href="#" id="Ing">Welcome</a>
+				<a href="" id="Esp">Bienvenido</a></BR>
+				<a href="" id="Eng">Welcome</a>
 			</div>
 		</div>
 	</div>
